--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- index.html -->
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Page title</title>
-	
+<meta charset="utf-8">
+<title>Page title</title>
+<body>	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
